// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenuItem props color 1`] = `
<button
  class="euiListItemLayout euiContextMenuItem emotion-euiListItemLayout-isInteractive-euiContextMenuItem-center-colors"
  data-test-subj="euiListItemLayout"
  type="button"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiContextMenuItem__text emotion-euiListItemLayout__text-wrap-euiContextMenuItem__text"
    >
      Delete
    </span>
  </span>
</button>
`;

exports[`EuiContextMenuItem props color is ignored when disabled 1`] = `
<button
  class="euiListItemLayout euiContextMenuItem emotion-euiListItemLayout-isDisabled-euiContextMenuItem-center"
  data-test-subj="euiListItemLayout"
  disabled=""
  type="button"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiContextMenuItem__text emotion-euiListItemLayout__text-wrap-euiContextMenuItem__text"
    >
      Delete
    </span>
  </span>
</button>
`;

exports[`EuiContextMenuItem props disabled 1`] = `
<button
  class="euiListItemLayout euiContextMenuItem emotion-euiListItemLayout-isDisabled-euiContextMenuItem-center"
  data-test-subj="euiListItemLayout"
  disabled=""
  type="button"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiContextMenuItem__text emotion-euiListItemLayout__text-wrap-euiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`EuiContextMenuItem props icon 1`] = `
<div
  class="euiListItemLayout euiContextMenuItem emotion-euiListItemLayout-euiContextMenuItem-center"
  data-test-subj="euiListItemLayout"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
    >
      <span
        class="euiIcon fa-user emotion-euiContextMenu__icon"
      />
    </span>
    <span
      class="euiListItemLayout__text euiContextMenuItem__text emotion-euiListItemLayout__text-wrap-euiContextMenuItem__text"
    />
  </span>
</div>
`;

exports[`EuiContextMenuItem renders 1`] = `
<a
  aria-label="aria-label"
  class="euiListItemLayout euiContextMenuItem testClass1 testClass2 emotion-euiListItemLayout-isInteractive-euiContextMenuItem-center-euiTestCss"
  data-test-subj="test subject string"
  href="url"
  rel="noreferrer"
>
  <span
    class="euiListItemLayout__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiContextMenuItem__text emotion-euiListItemLayout__text-wrap-euiContextMenuItem__text"
    >
      Hello
    </span>
  </span>
</a>
`;
